// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow function 1`] = `
"
const foo = /* jsperf */ () => 'test';

      ↓ ↓ ↓ ↓ ↓ ↓

const foo = /* jsperf */function () {
  console.time('foo');
  var _returnValue = 'test';
  console.timeEnd('foo');
  return _returnValue;
};
"
`;

exports[`clazz method 1`] = `
"
class clazz {
  // jsperf
  method() {
    console.log('class method !');
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

class clazz {
  // jsperf
  method() {
    console.time('function');

    console.log('class method !');
    console.timeEnd('function');
  }
}
"
`;

exports[`function with return statement 1`] = `
"
// jsperf
function foo() {
  const bar = 'bar';
  return bar;
}

      ↓ ↓ ↓ ↓ ↓ ↓

// jsperf
function foo() {
  console.time('foo');

  const bar = 'bar';
  var _returnValue = bar;
  console.timeEnd('foo');
  return _returnValue;
}
"
`;

exports[`function without return statement 1`] = `
"
// jsperf
function todo() {
  console.log('toto');
}

      ↓ ↓ ↓ ↓ ↓ ↓

// jsperf
function todo() {
  console.time('todo');

  console.log('toto');
  console.timeEnd('todo');
}
"
`;
